# multimodal-search

./: .env.example  .gitignore  DEPLOYMENT_PLAN.md  EMBEDDING_MIGRATION_PLAN.md  FRONTEND_PLAN.md  PLAN.md  README.md  SECURITY_PLAN.md  UPLOAD_PLAN.md  pyproject.toml
.claude/agents/: code-ingest.md  doc-ingest.md  eval-harness.md  retrieval-api.md
.github/workflows/: ci.yml
corpus/: README.md
corpus/src/: api.py  extractor.py  store_memory.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  modality.ts
frontend/src/components/: ModalityBadge.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx  UploadPanel.tsx
scripts/: delete_upload.py  rebuild_lancedb_for_commit.py  seed_r2.py
src/mmsearch/: config.py  db.py  schema.py  settings.py
src/mmsearch/api/: deps.py  main.py  server.py
src/mmsearch/clients/: captioner_api.py  captioner_local.py  cohere.py  fakes.py  (+2 more)
tests/fixtures/: __init__.py
tests/unit/: test_api_deps.py  test_api_main.py  test_captioner_api.py  test_captioner_local.py  test_cohere_client.py  test_config.py  test_db.py  test_eval_dataset.py  test_eval_run.py  test_fakes.py  test_fixture_corpus.py  test_fusion.py  test_ingest_base.py  test_ingest_cli.py  test_ingest_code.py  test_ingest_documents.py  test_ingest_tables.py  test_ingest_thumbnails.py  test_ingest_upload.py  test_openai_client.py  test_pipeline.py  test_protocols.py  test_r2_storage.py  test_retrieve_types.py  test_schema.py  test_settings.py  test_upload_validation.py
(+25 files in other folders)
