[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmsearch"
version = "0.1.0"
description = "Multimodal Search for Engineers"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.13",
    "pyarrow==17.0.0",  # pinned: newer wheels (e.g. 25.x) trip Windows Smart App Control on this machine
    "cohere>=5.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "tree-sitter-language-pack>=0.2",
    "pydantic-settings>=2.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
]

[project.scripts]
mmsearch = "mmsearch.ingest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Only ingest/documents.py's diagram/scanned-page captioning path needs these.
# The API, retrieval, and eval surfaces never import torch. For a CUDA build
# on Windows, install torch separately first, e.g.:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124
# then `pip install -e ".[local-captioner]"` for the rest.
local-captioner = [
    "transformers>=4.44,<5.0",  # moondream2's trust_remote_code modeling code breaks on transformers 5.x
    "einops>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mmsearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call real external APIs (opt-in, not run by default)",
]
addopts = "-m \"not live\""
